compile_errors.txt
> Task :app:checkKotlinGradlePluginConfigurationErrors SKIPPED
> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE
> Task :app:kspDebugKotlin UP-TO-DATE

> Task :app:compileDebugKotlin
./gradlew : exception: WARNING: A terminally deprecated 
method in sun.misc.Unsafe has been called
In riga:1 car:1
+ ./gradlew :app:compileDebugKotlin 2>&1 | Out-File 
-FilePath compile_e ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (exception: W 
   ARN...has been called:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
exception: WARNING: sun.misc.Unsafe::objectFieldOffset 
has been called by 
org.jetbrains.kotlin.com.intellij.util.containers.Unsafe (
file:/C:/Users/dot/.gradle/caches/modules-2/files-2.1/org.
jetbrains.kotlin/kotlin-compiler-embeddable/2.1.0/988bf980
588bbbcfa1ba19c1ffd7aa869b335a31/kotlin-compiler-embeddabl
e-2.1.0.jar)
exception: WARNING: Please consider reporting this to the 
maintainers of class 
org.jetbrains.kotlin.com.intellij.util.containers.Unsafe
exception: WARNING: sun.misc.Unsafe::objectFieldOffset 
will be removed in a future release
exception: app\src\main\java\com\app\miklink\data\pdf\PdfG
enerator.kt:156:36: error: unresolved reference 
'systemDescription'.
exception:         val probeModel = 
lldpInfo?.systemDescription ?: "N/A"
exception:                                    
^^^^^^^^^^^^^^^^^
exception: app\src\main\java\com\app\miklink\data\pdf\PdfG
enerator.kt:157:40: error: unresolved reference 'portId'.
exception:         val probeInterface = lldpInfo?.portId 
?: lldpInfo?.interfaceName ?: "N/A"
exception:                                        ^^^^^^
exception: app\src\main\java\com\app\miklink\ui\test\TestV
iewModel.kt:590:56: error: unresolved reference 
'runSpeedTest'.
exception:                     when (val speedResult = 
repository.runSpeedTest(probe, client)) {
exception:                                                
        ^^^^^^^^^^^^
exception: app\src\main\java\com\app\miklink\ui\test\TestV
iewModel.kt:591:28: error: one type argument expected. 
Use class 'Success' if you don't intend to pass type 
arguments.
exception:                         is UiState.Success -> {
exception:                            ^^^^^^^^^^^^^^^

> Task :app:compileDebugKotlin FAILED

[Incubating] Problems report is available at: file:///C:/Users/dot/AndroidStudioProjects/MikLink/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugKotlin'.
> A failure occurred while executing org.jetbrains.kotlin.
compilerRunner.GradleCompilerRunnerWithWorkers$GradleKotli
nCompilerWorkAction
   > Compilation error. See log for more details

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log 
output.
> Run with --scan to generate a Build Scan (Powered by 
Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 7s
17 actionable tasks: 1 executed, 16 up-to-date
